Edits from JA to BES abstract

--- a/docs/misc/besabstract.tex
+++ b/docs/misc/besabstract.tex
@@ -10,17 +10,19 @@
 \begin{document}
 \renewcommand{\refname}{\CHead{}}
 
-EM Wolkovich, J Auerbach and ??
+EM Wolkovich, J Auerbach 
 
-Climate change breaks down a fundamental model of plant biology\\
-Subtitle: How warmer days degrade the central limit theory and make a thermal sum model of leafout less predictable
+Climate change breaks down a fundamental feature of plant biology\\
+Subtitle: How warmer days make leafout less predictable % How warmer days degrade the central limit theory and make a thermal sum model of leafout less predictable
 
 Abstract (196/200 words): \\
-Anthropogenic climate change has led to widespread impacts on biological systems, with concerns that increasing warming may fundamentally shift some biological processes, making forecasting and thus mitigation and adaptation more difficult. Plant phenology---the timing of recurring life history events, such as leafout and flowering---has been routinely cited as a potential case of this, with evidence that plants have slowed down their response to warming, become more variable or less predictable often reported. Here, we combine long-term observational data with a random hitting time (or what??) of one of the model fundamental biological models---the thermal sum, or growing degree day model---to understand trends over time. We show that this model predicts declining sensitivity and declining variance with warming, but depends on assumptions that anthropogenic climate change violates. In particular we find that warming climate increases the environmental autocorrelation that plants experience. This outcome---effectively breaking down the central limit theorem for a growing degree day models---predicts increasing variance, which we show in datasets from across the Northern hemisphere. These results show how climate change may fundamentally make biological systems less predictible, with consequences for crops, carbon sequestration and thus climate change itself. \\
+Anthropogenic climate change is having a widespread impact on biological systems. A major concern is that increasing warming will fundamentally alter biological processes, making forecasting, mitigation, and adaptation more difficult. Plant phenology—the timing of recurring life history events, such as leafout and flowering—has been routinely cited as an example, with a growing literature claiming that in response to warming, plants have slowed down, become more variable, or less predictable. Here, we examine the thermal sum model (growing degree day model) using results from the theory of stopped random walks. We show that, under normal conditions, the model predicts both declining sensitivity and declining variance with warming. However, we also show that excessive warming can produce a new normal in which the variance actually increases. We demonstrate this theoretical finding using datasets from across the Northern hemisphere. The data confirm that climate change is making many biological systems less predictable, with consequences for crops, carbon sequestration and thus climate change itself. \\
 
 
 
 Other text: 
-Anthrogenic climate change has led to widespread impacts on biological systems, with concerns that increasing warming may force some systems across boundaries or breakpoints. 
+Anthropogenic climate change has led to widespread impacts on biological systems, with concerns that increasing warming may force some systems across boundaries or breakpoints. 
 
 \end{document}
+
+% From JA on 28 August 2025: December talk sounds good, below are some suggested edits. (Real quick on language: it isn't the temperature sum model/law that's breaking, it's our ability to predict leafout based on that model. Variation both year over year and within year is increasing in many ecosystems—so the "rule" or heuristic that a plant blooms in the same month each year or at the same time within year is what's breaking down.)
