BES abstract submitted, some notes while doing it added

--- a/docs/misc/besabstract.tex
+++ b/docs/misc/besabstract.tex
@@ -12,12 +12,15 @@
 
 EM Wolkovich, J Auerbach 
 
-Climate change breaks down a fundamental feature of plant biology\\
-Subtitle: How warmer days make leafout less predictable % How warmer days degrade the central limit theory and make a thermal sum model of leafout less predictable
+Actual title: How warmer days make plant biology less predictable
+
+% Climate change breaks down a fundamental feature of plant biology\\
+% Subtitle: How warmer days make leafout less predictable % How warmer days degrade the central limit theory and make a thermal sum model of leafout less predictable
 
 Abstract (196/200 words): \\
 Anthropogenic climate change is having a widespread impact on biological systems. A major concern is that increasing warming will fundamentally alter biological processes, making forecasting, mitigation, and adaptation more difficult. Plant phenology—the timing of recurring life history events, such as leafout and flowering—has been routinely cited as an example, with a growing literature claiming that in response to warming, plants have slowed down, become more variable, or less predictable. Here, we examine the thermal sum model (growing degree day model) using results from the theory of stopped random walks. We show that, under normal conditions, the model predicts both declining sensitivity and declining variance with warming. However, we also show that excessive warming can produce a new normal in which the variance actually increases. We demonstrate this theoretical finding using datasets from across the Northern hemisphere. The data confirm that climate change is making many biological systems less predictable, with consequences for crops, carbon sequestration and thus climate change itself. \\
 
+Argh, needs to be 150! So I took out `—the timing of recurring life history events, such as leafout and flowering—'\\
 
 
 Other text: 
